==================================================
Commit Hash: 79dccbb4edfc1c5b910bb6e75c28748d7be287d6
Author: Niwatori401
Date: Sat Mar 4 01:18:25 2023

Move last stable 1.3 commit to dedicated loadfolder
Add script to automatically generate changelog

==================================================
Commit Hash: 896107192d5c3312e8c4b773f1d785801c090737
Author: Niwatori401
Date: Sat Mar 4 00:28:10 2023

Add display for reason RR sprites are not being shown
Fix flab grenades not working if you didn't own Biotech DLC
Fix flab grenade thrown sprite not showing if you didn't own Biotech DLC
Fix potential NRE in BodyTypeUtility.UpdateSprite()
Remove extraneous copy of AlienRace dll

==================================================
Commit Hash: 03b65fe132dbc4372290aa3ead6560f6f8965701
Author: Niwatori401
Date: Wed Mar 1 12:51:44 2023

Update credits
Clarify which perks are needed for 'Ascension'

==================================================
Commit Hash: beef00693fcfa8704345bf122bb18efed1532040
Author: Niwatori401
Date: Wed Mar 1 11:48:07 2023

Enable perk system

==================================================
Commit Hash: 629800af4bdfc353591c88f47cce02bb45b859f5
Author: Niwatori401
Date: Wed Mar 1 11:45:24 2023

Change icons for UltraTech implants to custom icons

==================================================
Commit Hash: fa53578b8a07d13d10441849a7cb9c6c02e883c6
Author: Niwatori401
Date: Wed Mar 1 10:13:49 2023

Add tooltips for settings
Fix UltraTech apparel adding flat digestion values instead of multiplier

==================================================
Commit Hash: dcd93b14eacba508881c92713350f2e4be405a13
Author: Niwatori401
Date: Tue Feb 28 21:52:17 2023

Add option to hide/show ineligible perks
Add predicate member to perks which dictates for whom it is shown
Fix bug in Breakneck Buffet / Makes all the Rules where values were swapped

==================================================
Commit Hash: c801fcfba69312b4ebb3072e95574b40db0958cd