@@ -8,7 +8,10 @@
 		<recipeMaker>
 			<displayPriority>200</displayPriority>
 			<workSkill>Crafting</workSkill>
-		</recipeMaker>	
+		</recipeMaker>
+		<thingCategories>
+			<li>Apparel</li>
+		</thingCategories>		
 		<tradeTags>
 			<li>Clothing</li>
 			<li>Armor</li>
