@@ -1,5 +1,12 @@
 ==================================================
-Commit Hash: 79dccbb4edfc1c5b910bb6e75c28748d7be287d6
+Commit Hash: 566ab5c5eafc32b83999383a06c0964d4a74ffe7
+Author: Niwatori401
+Date: Sat Mar 4 02:16:00 2023
+
+Fix UltraTech apparel being unhaulable
+
+==================================================
+Commit Hash: 309641e111fb0472049e834e25fbd700fb713846
 Author: Niwatori401
 Date: Sat Mar 4 01:18:25 2023
 
